--- a/views/add.ejs
+++ b/views/add.ejs
@@ -15,15 +15,15 @@
   <form action="/save" method="post">
         <div class="form-group">
             <label for="name">Name:</label>    
-            <input type="text" name="Name" class="form-control" id="name">
+            <input type="text" name="Name" class="form-control" id="name" required>
         </div>
         <div class="form-group">
             <label for="salary">Salary:</label>    
-            <input type="text" name="Salary" class="form-control" id="salary">
+            <input type="text" name="Salary" class="form-control" id="salary" required>
         </div>
         <div class="form-group">
             <label for="age">Age:</label>    
-            <input type="text" name="Age" class="form-control" id="age">
+            <input type="text" name="Age" class="form-control" id="age" required>
         </div>
         <button class="btn btn-primary" type="submit">Submit</button>
   </form>
