--- a/views/emp_index.ejs
+++ b/views/emp_index.ejs
@@ -14,7 +14,7 @@
 <div class="container">
   <h2><%= title %></h2>
   <a href="/add" class="btn btn-sm btn-primary">Add Employee</a><br/><br/>
-  <table class="table table-dark table-striped">
+  <table class="table table-info table-striped">
     <thead>
       <tr>
         <th>Name</th>
